test/sema/typeck/generic/trait-bounds-missing.out
error: type `X` does not implement trait `Foo`.
--> trait-bounds-missing.dora:4:10
 | class X
 | class A[T: Foo]
 | fn f(_x: A[X]) {}
            ~~~~
 | 
1 error found.
