test/sema/typeck/generic/trait-bounds-missing.dora
trait Foo {}
class X
class A[T: Foo]
fn f(_x: A[X]) {}
